<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:layoutDirection="ltr"
    tools:context=".two_nd_degree_equation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:text="@string/two_nd_degree_equation_LABEL"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/parameter_a"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/GetParameter_A"
        android:layout_width="347dp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        android:background="@drawable/edittextback"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:hint="@string/a_hint"
        android:textColorHint="#56FFFFFF"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter_b"
        android:textStyle="bold"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/GetParameter_B"
        android:layout_width="347dp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        android:background="@drawable/edittextback"
        android:inputType="numberDecimal"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter_c"
        android:textStyle="bold"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/GetParameter_C"
        android:layout_width="347dp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        android:background="@drawable/edittextback"
        android:inputType="numberDecimal"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/MainResult"
        android:textColor="#20C20E"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="25sp" />

    <android.widget.Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:padding="15dp"
        android:background="@drawable/mybutten"
        />

</LinearLayout>