<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMI_Calculator"
    android:background="@color/black"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:text="@string/LABEL_User_Numbers"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <EditText
        android:id="@+id/UserNumbers"
        android:layout_width="347dp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:text=""
        android:maxLength="2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        android:background="@drawable/edittextback"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/LABEL_UserInputNumber"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/InputUserNumbers"
        android:layout_width="347dp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        android:background="@drawable/edittextback"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/ListShow"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text=""
        android:textSize="30sp"
        android:textColor="#20C20E"
        />

    <TextView
        android:id="@+id/LowNum_HighNum_Show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text=""
        android:textColor="#20C20E"
        android:textSize="30sp" />

    <android.widget.Button
        android:id="@+id/NextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/mybutten"
        android:padding="15dp"
        android:text="@string/LABEL_UserNextNumber"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <android.widget.Button
        android:id="@+id/Calculate_low_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:padding="15dp"
        android:background="@drawable/mybutten"
        />

</LinearLayout>